# dotfiles

./: .FreeCAD  .Xauthority  .Xilinx  .Xresources  .altera.quartus  .android  .arduino15  .bash_history  .bash_profile  .bashrc  .cache  .dosbox  .eltclshrc  .epspdf  .ghidra  .gitignore  .gitmodules  .gmrunrc  .gtkwaverc  .gv  .iftoprc  .ignore  .inputrc  .ipe  .java  .local  .m2  .mailcap  .nethackrc  .nvidia-settings-rc  .ollama  .pam_environment  .profile  .qmmp  .renpy  .rootrc  .signature  .ssh  .steam  .stignore  (+47 more)
.config/: .gitignore  Electron  Element  GIMP  LatticeSemi  README.md  aerc  bakamplayer.ini  blender  borg  cef_user_data  docker  fontforge  fonts  keepassxc  kicad  libreoffice  lxtask.conf  mimeapps.list  obs-studio  okularpartrc  openra  pavucontrol.ini  protonfixes  proxychains.conf  qxkb.cfg  redshift.conf  remind  syncthing  unity3d  user-dirs.dirs  weston.ini  zoomus.conf
.emacs.d/: edit.el  gui.el  init.el  install-packages.el  whitespace.el
.java/: .gitignore
.librewolf/: .gitignore  default  installs.ini  librewolf.overrides.cfg  profiles.ini
.mozilla/: firefox
.pki/: .gitignore
.var/: .gitignore  app
.vnc/: .gitignore  config  passwd.sh  xstartup
.wicd/: .gitignore
.xpra/: xpra.conf
Xresources.d/: urxvt  xft  xscreensaver  xterm
alias.d/: pacman  template
conf.d/: alias  geant4.sh  mu3e.sh  quartus.sh  template
config/: mimeapps.list  user-dirs.dirs
dev/: Makefile  clhep  geant4  root
emacs.d/: .gitignore  init.el
envrc.d/: 90-altera.sh  90-geant.sh  90-xilinx.sh
opt/clip_sync/: CMakeLists.txt  main.cpp  main.py
(+758 files in other folders)
